[package]
name = "rust-grpc"
version = "0.1.0"
authors = ["wilsoncode <keenhoong.lai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version = "0.3.1", features = ["tls"]}
tokio = {version = "0.2.22", features = ["stream", "macros"]}
futures = "0.3.5"

[build-dependencies]
tonic-build = "0.3.1"

[[bin]]
name = "server"
path = "src/server.rs"
